@@ -1,3 +1,7 @@
+2010-05-28  Eduardo Santiago  <santiago@redhat.com>
+
+	* dwarf_getlocation.c (dwarf_getlocation): Do attr_ok check first thing.
+
 2010-05-27  Roland McGrath  <roland@redhat.com>
 
 	* dwarf.h: Add DW_AT_enum_class, DW_AT_linkage_name,
